--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.graylog</groupId>
     <artifactId>nexmo-alarm-callback</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
@@ -22,8 +22,8 @@
     </developers>
 
     <scm>
-        <connection>scm:git@https://github.com/cvtienhoven/graylog-plugin-nexmo.git</connection>
-        <developerConnection>scm:git@https://github.com/cvtienhoven/graylog-plugin-nexmo.git</developerConnection>
+        <connection>scm:git:https://github.com/cvtienhoven/graylog-plugin-nexmo.git</connection>
+        <developerConnection>scm:git:https://github.com/cvtienhoven/graylog-plugin-nexmo.git</developerConnection>
         <url>https://github.com/cvtienhoven/graylog-plugin-nexmo.git</url>
         <tag>HEAD</tag>
     </scm>
