--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.graylog</groupId>
     <artifactId>nexmo-alarm-callback</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
@@ -25,7 +25,7 @@
         <connection>scm:git:https://github.com/cvtienhoven/graylog-plugin-nexmo.git</connection>
         <developerConnection>scm:git:https://github.com/cvtienhoven/graylog-plugin-nexmo.git</developerConnection>
         <url>https://github.com/cvtienhoven/graylog-plugin-nexmo.git</url>
-        <tag>HEAD</tag>
+        <tag>1.0.1</tag>
     </scm>
 
     <properties>
